prettier setup completed

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "devDependencies": {
     "css-loader": "^6.7.1",
-    "prettier": "2.7.1",
+    "prettier": "^2.7.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
     "webpack-cli": "^4.10.0"
@@ -95,7 +95,8 @@
   "private": true,
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "format": "npx pretter -write ."
   },
   "repository": {
     "type": "git",
