--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "json-parse-even-better-errors": "^2.3.1",
     "json-schema-traverse": "^0.4.1",
     "kind-of": "^6.0.3",
+    "leaflet": "^1.9.2",
     "loader-runner": "^4.3.0",
     "locate-path": "^5.0.0",
     "merge-stream": "^2.0.0",
